[/search] Adding static page

--- a/src/main/resources/templates/pages/index.jade
+++ b/src/main/resources/templates/pages/index.jade
@@ -1,7 +1,7 @@
 extends /application.jade
 
 block main
-    .ui.left.aligned.container
+    .ui.center.aligned.container
         form.ui.form(action="/search", method="get")
             .six.wide.field
                 .ui.left.icon.action.input
