--- a/src/main/resources/templates/pages/search.jade
+++ b/src/main/resources/templates/pages/search.jade
@@ -11,7 +11,7 @@ block main
                         button.ui.primary.button(type="submit") Search a card
         .ui.divider
         .ui.middle.aligned.divided.list
-            a.ui.item(href="/card/370658")
+            a.ui.item(href="/cards/370658")
                 .image
                     img(src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=370658&type=card")
                 .content
@@ -21,7 +21,7 @@ block main
                             +1: Search your library for a Swamp card, reveal it, and put it into your hand. Then shuffle your library.<br/>
                             −3: Target creature gets +X/+X or -X/-X until end of turn, where X is the number of Swamps you control.<br/>
                             −6: You get an emblem with "Swamps you control have ‘(T): Add (B)(B)(B)(B) to your mana pool.'"<br/>
-            a.ui.item(href="/card/414388")
+            a.ui.item(href="/cards/414388")
                 .image
                     img(src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=414388&type=card")
                 .content
@@ -31,7 +31,7 @@ block main
                             +1: Up to one target creature gets -2/-1 until your next turn.<br/>
                             −2: Put the top two cards of your library into your graveyard, then you may return a creature card from your graveyard to your hand.<br/>
                             −7: You get an emblem with "At the beginning of your end step, create X 2/2 black Zombie creature tokens, where X is two plus the number of Zombies you control."<br/>
-            a.ui.item(href="/card/235597")
+            a.ui.item(href="/cards/235597")
                 .image
                     img(src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=235597&type=card")
                 .content
