--- a/src/main/resources/templates/application.jade
+++ b/src/main/resources/templates/application.jade
@@ -3,7 +3,7 @@ html
     head
         title Magic View 
         link(rel="stylesheet", type="text/css", href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.css")
-        link(rel="stylesheet", type="text/css", href="/assets/css/magic-view.css")
+        link(rel="stylesheet", type="text/css", href="/css/magic-view.css")
         
     body
         .ui.fixed.inverted.menu
