--- a/src/main/resources/templates/pages/cards/card.jade
+++ b/src/main/resources/templates/pages/cards/card.jade
@@ -1,11 +1,14 @@
 extends ../../application.jade
 
 block main
-    .ui.text.container
-        img.ui.little.left.floated.image(src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=235597&type=card")
-        h1 Liliana of the Veil
-        .ui.divider
-        p.
-            +1: Each player discards a card.<br/>
-            −2: Target player sacrifices a creature.<br/>
-            −6: Separate all permanents target player controls into two piles. That player sacrifices all permanents in the pile of his or her choice.
+    .ui.segment
+        .ui.container
+            h1 Liliana of the Veil
+
+    .ui.segment
+        .ui.left.aligned.container
+            img.ui.little.left.floated.image(src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=235597&type=card")
+            p.
+                +1: Each player discards a card.<br/>
+                −2: Target player sacrifices a creature.<br/>
+                −6: Separate all permanents target player controls into two piles. That player sacrifices all permanents in the pile of his or her choice.
