--- a/src/main/resources/templates/pages/index.jade
+++ b/src/main/resources/templates/pages/index.jade
@@ -1,11 +1,12 @@
 extends ../application.jade
 
 block main
-    .ui.center.aligned.container
-        form.ui.form(action="/search", method="get")
-            .six.wide.field
-                .ui.left.icon.action.input
-                    input.prompt(type=text, name="q", placeholder="ie: Liliana Vess")
-                    i.search.icon
-                    button.ui.primary.button(type="submit") Search a card
+    .ui.segment
+        .ui.container
+            form.ui.form(action="/search", method="get")
+                .field
+                    .ui.left.icon.action.input
+                        input.prompt(type=text, name="q", placeholder="ie: Liliana Vess")
+                        i.search.icon
+                        button.ui.primary.button(type="submit") Search !
     
