[style] Add customized semantic-ui (primary color changed)

--- a/src/main/resources/templates/application.jade
+++ b/src/main/resources/templates/application.jade
@@ -2,11 +2,11 @@ doctype html
 html
     head
         title Magic View 
-        link(rel="stylesheet", type="text/css", href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.css")
+        link(rel="stylesheet", type="text/css", href="/css/semantic.css")
         link(rel="stylesheet", type="text/css", href="/css/magic-view.css")
         
     body
-        .ui.violet.inverted.menu
+        .ui.teal.inverted.menu
             .ui.container
                 a.brand.active.item(href="/") Magic View
                 a.item(href="/search") Search
