Integrate intercooler.js

--- a/src/main/resources/templates/application.jade
+++ b/src/main/resources/templates/application.jade
@@ -14,3 +14,6 @@ html
         #main
             .ui.four.column.centered.grid
                 block main
+                
+        script(src="https://code.jquery.com/jquery-1.10.2.min.js")
+        script(src="https://intercoolerreleases-leaddynocom.netdna-ssl.com/intercooler-1.0.3.min.js")
