[view] Index : search field takes all the width and has a white font color

--- a/src/main/resources/templates/pages/index.jade
+++ b/src/main/resources/templates/pages/index.jade
@@ -4,20 +4,19 @@ block main
     .ui.main.inverted.fluid.vertical.segment
         .ui.inverted.divider
         .ui.main.inverted.fluid.vertical.segment
-            form.ui.form(
+            form(
                 ic-post-to="/ic/search",
                 ic-target="#search-results",
                 ic-trigger-from="#search",
                 ic-trigger-delay="500ms"
                 )
-                .field
-                    .ui.inverted.transparent.left.icon.input
-                        input.prompt(
-                            type=text,
-                            name="q",
-                            placeholder="ie: Liliana Vess",
-                            ic-trigger-on="keyup changed"
-                        )#search
-                        i.search.icon
+                .ui.fluid.inverted.transparent.left.icon.input
+                    input.prompt(
+                        type=text,
+                        name="q",
+                        placeholder="ie: Liliana Vess",
+                        ic-trigger-on="keyup changed"
+                    )#search
+                    i.search.icon
 
     #search-results
