--- a/src/main/resources/templates/parts/search-results.jade
+++ b/src/main/resources/templates/parts/search-results.jade
@@ -7,12 +7,14 @@ if cards
                         .header(href="##{card.name}") #{card.name}
                     .content
                         img.left.floated.small.ui.image(src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=#{card.multiverseId}&type=card")
-                        .ui.purple.labels
+                        .ui.violet.labels
                             .ui.label lorem ipsum
                             .ui.label dolor sit amet
-                            .ui.label consectetuer 
+                            .ui.label consectetuer
                             .ui.label adipiscing elit
+                    .ui.bottom.attached.button View details
+                        i.angle.double.right.icon
 
 else
     .ui.main.fluid.vertical.segment
-        .ui.purple.message No results
+        .ui.violet.message No results
