Adding a footer with wizard's copyright

--- a/src/main/resources/templates/application.jade
+++ b/src/main/resources/templates/application.jade
@@ -13,6 +13,11 @@ html
 
         #main
             block main
-                
+
+        .ui.inverted.vertical.footer.segment
+            .ui.container
+                .ui.inverted.list
+                    .item All mana and card symbol images are copyright Wizards of the Coast (http://magicthegathering.com)
+
         script(src="https://code.jquery.com/jquery-1.10.2.min.js")
         script(src="https://intercoolerreleases-leaddynocom.netdna-ssl.com/intercooler-1.0.3.min.js")
