Adding mana css/font for displaying magic symbols

--- a/src/main/resources/templates/application.jade
+++ b/src/main/resources/templates/application.jade
@@ -2,8 +2,9 @@ doctype html
 html
     head
         title MTG : Grimoire
-        link(rel="stylesheet", type="text/css", href="/css/semantic.css")
-        link(rel="stylesheet", type="text/css", href="/css/magic-view.css")
+        link(rel="stylesheet", type="text/css", href="css/semantic.css")
+        link(rel="stylesheet", type="text/css", href="css/mana.css")
+        link(rel="stylesheet", type="text/css", href="css/magic-view.css")
         
     body
         .ui.main.inverted.vertical.segment
