Return to the default semantic-ui

--- a/src/main/resources/templates/application.jade
+++ b/src/main/resources/templates/application.jade
@@ -2,7 +2,7 @@ doctype html
 html
     head
         title MTG : Grimoire
-        link(rel="stylesheet", type="text/css", href="css/semantic.css")
+        link(rel="stylesheet", type="text/css", href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.css")
         link(rel="stylesheet", type="text/css", href="css/mana.css")
         link(rel="stylesheet", type="text/css", href="css/magic-view.css")
         
