Style : back to default blue theme until we tweak the semantic ui

--- a/src/main/resources/templates/pages/index.jade
+++ b/src/main/resources/templates/pages/index.jade
@@ -1,7 +1,7 @@
 extends ../application.jade
 
 block main
-    .ui.main.fluid.violet.secondary.inverted.vertical.segment
+    .ui.main.fluid.blue.secondary.inverted.vertical.segment
         form(
             ic-get-from="/api/cards",
             ic-target="#search-results",
