--- a/src/main/resources/templates/parts/card.jade
+++ b/src/main/resources/templates/parts/card.jade
@@ -6,6 +6,6 @@
             .content
                 img.left.floated.little.ui.image(src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=#{card.multiverseId}&type=card")
                 if card.tags
-                    .ui.violet.labels
+                    .ui.blue.labels
                         for tag in card.tags
                             .ui.label #{tag}
