--- a/src/main/resources/templates/pages/index.jade
+++ b/src/main/resources/templates/pages/index.jade
@@ -2,17 +2,19 @@ extends ../application.jade
 
 block main
     .ui.main.fluid.blue.secondary.inverted.vertical.segment
-        form(
+        form#form(
             ic-get-from="/api/cards",
             ic-target="#search-results",
-            ic-trigger-from="#search",
-            ic-trigger-delay="500ms"
+            ic-trigger-on="submit"
             )
             .ui.fluid.inverted.transparent.left.icon.input
                 input.prompt(
                     type=text,
                     name="q",
                     placeholder="ie: Liliana Vess",
+                    ic-get-from="/api/cards",
+                    ic-target="#search-results",
+                    ic-trigger-delay="500ms"
                     ic-trigger-on="keyup changed"
                 )#search
                 i.search.icon
