[minor] Display more info on card

--- a/src/main/resources/templates/parts/card.jade
+++ b/src/main/resources/templates/parts/card.jade
@@ -13,3 +13,6 @@
                     .ui.blue.labels
                         for tag in card.tags
                             .ui.label #{tag}
+                p= card.text
+                if card.power || card.toughness
+                    p #{card.power}/#{card.toughness}
